<?xml version="1.0" encoding="utf-8"?>
<merge
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	tools:showIn="@layout/activity_conversation">

	<View
		style="@style/Divider.Horizontal"
		android:layout_alignParentTop="true"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<ImageButton
			android:id="@+id/none"
			android:layout_width="38dp"
			android:layout_height="@dimen/text_input_height"
			android:background="?attr/selectableItemBackground"
			android:clickable="true"
			android:enabled="false"
			android:padding="@dimen/margin_small"
			android:src="@drawable/blank_square"/>

		<ImageButton
			android:id="@+id/red"
			android:layout_width="38dp"
			android:layout_height="@dimen/text_input_height"
			android:background="?attr/selectableItemBackground"
			android:clickable="true"
			android:enabled="false"
			android:padding="@dimen/margin_small"
			android:src="@drawable/red_square"/>

		<ImageButton
			android:id="@+id/yellow"
			android:layout_width="38dp"
			android:layout_height="@dimen/text_input_height"
			android:background="?attr/selectableItemBackground"
			android:clickable="true"
			android:enabled="false"
			android:padding="@dimen/margin_small"
			android:src="@drawable/yellow_square"/>

		<ImageButton
			android:id="@+id/green"
			android:layout_width="38dp"
			android:layout_height="@dimen/text_input_height"
			android:background="?attr/selectableItemBackground"
			android:clickable="true"
			android:enabled="false"
			android:padding="@dimen/margin_small"
			android:src="@drawable/green_square"/>

		<ImageButton
			android:id="@+id/cyan"
			android:layout_width="38dp"
			android:layout_height="@dimen/text_input_height"
			android:background="?attr/selectableItemBackground"
			android:clickable="true"
			android:enabled="false"
			android:padding="@dimen/margin_small"
			android:src="@drawable/cyan_square"/>

		<ImageButton
			android:id="@+id/blue"
			android:layout_width="38dp"
			android:layout_height="@dimen/text_input_height"
			android:background="?attr/selectableItemBackground"
			android:clickable="true"
			android:enabled="false"
			android:padding="@dimen/margin_small"
			android:src="@drawable/blue_square"/>

		<ImageButton
			android:id="@+id/magenta"
			android:layout_width="38dp"
			android:layout_height="@dimen/text_input_height"
			android:background="?attr/selectableItemBackground"
			android:clickable="true"
			android:enabled="false"
			android:padding="@dimen/margin_small"
			android:src="@drawable/magenta_square"/>

		<ImageButton
			android:id="@+id/grey"
			android:layout_width="38dp"
			android:layout_height="@dimen/text_input_height"
			android:background="?attr/selectableItemBackground"
			android:clickable="true"
			android:enabled="false"
			android:padding="@dimen/margin_small"
			android:src="@drawable/grey_square"/>

		<ImageButton
			android:id="@+id/black"
			android:layout_width="38dp"
			android:layout_height="@dimen/text_input_height"
			android:background="?attr/selectableItemBackground"
			android:clickable="true"
			android:enabled="false"
			android:padding="@dimen/margin_small"
			android:src="@drawable/black_square"/>

		<CheckBox
			android:id="@+id/pin"
			android:layout_width="38dp"
			android:layout_height="42dp"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_gravity="start"
			android:buttonTint="@android:color/holo_blue_bright"
			android:onClick="onCheckboxClicked"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<org.thoughtcrime.securesms.components.emoji.EmojiToggle
			android:id="@+id/emoji_toggle"
			android:layout_width="@dimen/text_input_height"
			android:layout_height="@dimen/text_input_height"
			android:background="?attr/selectableItemBackground"
			android:padding="@dimen/margin_small"
			android:scaleType="center"/>

		<org.thoughtcrime.securesms.components.emoji.EmojiEditText
			android:id="@+id/input_text"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="@android:color/transparent"
			android:inputType="textMultiLine|textCapSentences"
			android:maxLines="3"
			android:minHeight="@dimen/text_input_height"
			android:textColor="@color/briar_text_primary"
			android:textColorHint="@color/briar_text_tertiary"/>

		<ImageButton
			android:id="@+id/btn_send"
			android:layout_width="@dimen/text_input_height"
			android:layout_height="@dimen/text_input_height"
			android:background="?attr/selectableItemBackground"
			android:clickable="true"
			android:contentDescription="@string/send"
			android:enabled="false"
			android:padding="@dimen/margin_small"
			android:src="@drawable/social_send_now_white"
			android:tint="@color/briar_primary"/>

	</LinearLayout>

	<org.thoughtcrime.securesms.components.emoji.EmojiDrawer
		android:id="@+id/emoji_drawer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/input_text"
		android:visibility="gone"/>

</merge>
